testsuite/tests/grammar/invalid_lexers/pattern_3.lkt
import common

lexer foo_lexer {
    val pat1 = p"{pat2}"
    val pat2 = p"{pat1}"
    example <- p"{pat1}"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
